# url_shortener

./: .gitignore  Cargo.toml  README.MD  build.rs  config_defaults.toml  index.html  launch.json
html/: 404.html  index.html  paste.html  url.html
html/static/: paste.html  style.css  url.html
src/: config.rs  database.rs  endpoints.rs  full_path.rs  main.rs  settings.rs  shortener.rs  templating.rs  url.rs
static/: style.css
