[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

# Terrible hack for compiling on macOS
[target.'cfg(target_os = "macos")'.package]
build = "build.rs"
links = "mysqlclient"

[dependencies]
# diesel = { version = "2.0.2", features = ["mysql"] }
actix-web = "4"
actix-files = "0.6.2"
actix-settings = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
mysql = "23.0.0"
# 
# base64 = "0.20.0"
# log = "0.4"